doesnt work 4 modify consumerOriginal and SubsetTask2